Changed database to postgresql!

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
-NEXT_PUBLIC_NODE_ENV="dev"
+NODE_ENV="development"
+
+DATABASE_URL="postgresql://postgres:cNT6UH0n0KjLFlqU@db.nkllqpkleiwatocgmxjh.supabase.co:5432/postgres?pgbouncer=true"
