--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rooms",
+  "name": "schoolboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
+    "prisma": "^5.6.0",
     "typescript": "^5"
   }
 }
