--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@
 
 NODE_ENV="development"
 
-DATABASE_URL="postgres://postgres.[YOUR-HOST]:[YOUR-PASSWORD]@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DATABASE_URL="postgres://postgres.[YOUR-SUPABASE-PROJECT-ID]:[YOUR-PASSWORD]@[YOUR-SUPABASE-HOST]:6543/postgres?pgbouncer=true"
 DIRECT_URL="postgresql://postgres:[YOUR-PASSWORD]@[YOUR-HOST]:5432/postgres"
